[project]
name = "tsagentkit-timesfm"
version = "1.0.0"
description = "TimesFM fork distribution for tsagentkit."
authors = [
    {name = "Rajat Sen", email = "senrajat@google.com"},
    {name = "Yichen Zhou", email = "yichenzhou@google.com"},
    {name = "Abhimanyu Das", email = "abhidas@google.com"},
    {name = "Petros Mol", email = "pmol@google.com"},
    {name = "Michael Chertushkin", email = "chertushkinmichael@gmail.com"},
]
maintainers = [
    {name = "cuizhengliang", email = "czlbou2012@gmail.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "huggingface_hub[cli]>=0.23.0",
    "safetensors>=0.5.3",
]

[project.urls]
Homepage = "https://github.com/LeonEthan/timesfm"
Repository = "https://github.com/LeonEthan/timesfm"
Issues = "https://github.com/LeonEthan/timesfm/issues"
Upstream = "https://github.com/google-research/timesfm"

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
]
flax = [
    "flax",
    "optax",
    "einshape",
    "orbax-checkpoint",
    "jaxtyping",
    "jax[cuda]"
]
xreg = [
    "jax[cuda]",
    "scikit-learn",
]

[tool.ruff]
line-length = 88
indent-width = 2

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
